plugins/javaFX/testData/highlighting/RootTagConstraint.fxml
<?xml version="1.0" encoding="UTF-8"?>
<?import java.util.*?>
<<error descr="java.util.ArrayList cannot be cast to javafx.scene.layout.AnchorPane">ArrayList</error> xmlns:fx="http://javafx.com/fxml"/>